--- a/conditional statements.ipynb
+++ b/conditional statements.ipynb
@@ -799,6 +799,541 @@
    "id": "57f0ee45",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "a=1000\n",
+    "b=2000\n",
+    "\"\"\"\n",
+    "1.add\n",
+    "2.sub\n",
+    "3.mul\n",
+    "4.division\n",
+    "Enter an option: 1  : 1000+2000,\n",
+    "\"\"\"\n",
+    "\"\"\"\n",
+    "1.add\n",
+    "2.sub\n",
+    "3.mul\n",
+    "4.division\n",
+    "Enter an option: 2  : 1000-2000,\n",
+    "\"\"\"\n",
+    "\"\"\"\n",
+    "1.add\n",
+    "2.sub\n",
+    "3.mul\n",
+    "4.division\n",
+    "Enter an option: 3  : 1000*2000,\n",
+    "\"\"\"\n",
+    "\"\"\"\n",
+    "1.add\n",
+    "2.sub\n",
+    "3.mul\n",
+    "4.division\n",
+    "Enter an option: 4  : 1000/2000,\n",
+    "\"\"\"\n",
+    "\"\"\"\n",
+    "1.add\n",
+    "2.sub\n",
+    "3.mul\n",
+    "4.division\n",
+    "Enter an option: 5. if the user enters other numbers: we need to show the below message\n",
+    "PLEASE ENTER VALID OPTION\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2773d1b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.add\n",
+      "2.sub\n",
+      "3.mul\n",
+      "4.division\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1000\n",
+    "b=2000\n",
+    "print(\"1.add\\n2.sub\\n3.mul\\n4.division\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3ae6b79a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.add\n",
+      "2.sub\n",
+      "3.mul\n",
+      "4.division\n",
+      "ENTER AN OPTION:2\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1000\n",
+    "b=2000\n",
+    "print(\"1.add\\n2.sub\\n3.mul\\n4.division\")\n",
+    "opt = input(\"ENTER AN OPTION:\")\n",
+    "print(opt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "027c1f7d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.add\n",
+      "2.sub\n",
+      "3.mul\n",
+      "4.division\n",
+      "ENTER AN OPTION:2\n",
+      "THANK YOU!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1000\n",
+    "b=2000\n",
+    "print(\"1.add\\n2.sub\\n3.mul\\n4.division\")\n",
+    "opt = input(\"ENTER AN OPTION:\")\n",
+    "if opt==1:\n",
+    "    print(a+b)\n",
+    "if opt==2:\n",
+    "    print(a-b)\n",
+    "if opt==3:\n",
+    "    print(a*b)\n",
+    "if opt==4:\n",
+    "    print(a/b)\n",
+    "print(\"THANK YOU!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "dcd01dc6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"1\"==1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bd4101d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.add\n",
+      "2.sub\n",
+      "3.mul\n",
+      "4.division\n",
+      "ENTER AN OPTION:3\n",
+      "2000000\n",
+      "THANK YOU!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1000\n",
+    "b=2000\n",
+    "print(\"1.add\\n2.sub\\n3.mul\\n4.division\")\n",
+    "opt = input(\"ENTER AN OPTION:\")#3\n",
+    "if opt==\"1\":#\"3\"==\"1\": False\n",
+    "    print(a+b)\n",
+    "if opt==\"2\":#\"3\"==\"2\": False\n",
+    "    print(a-b)\n",
+    "if opt==\"3\":#\"3\"==\"3\": True\n",
+    "    print(a*b)\n",
+    "if opt==\"4\":#\"3\"==\"4\": False\n",
+    "    print(a/b)\n",
+    "print(\"THANK YOU!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1d71a283",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.add\n",
+      "2.sub\n",
+      "3.mul\n",
+      "4.division\n",
+      "ENTER AN OPTION:6\n",
+      "THANK YOU!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1000\n",
+    "b=2000\n",
+    "print(\"1.add\\n2.sub\\n3.mul\\n4.division\")\n",
+    "opt = input(\"ENTER AN OPTION:\")#6\n",
+    "if opt==\"1\":#\"6\"==\"1\": False\n",
+    "    print(a+b)\n",
+    "if opt==\"2\":#\"6\"==\"2\": False\n",
+    "    print(a-b)\n",
+    "if opt==\"3\":#\"6\"==\"3\": False\n",
+    "    print(a*b)\n",
+    "if opt==\"4\":#\"6\"==\"4\": False\n",
+    "    print(a/b)\n",
+    "print(\"THANK YOU!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "177b2203",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.add\n",
+      "2.sub\n",
+      "3.mul\n",
+      "4.division\n",
+      "ENTER AN OPTION:3\n",
+      "2000000\n",
+      "ENTER VALID OPTION\n",
+      "THANK YOU!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=1000\n",
+    "b=2000\n",
+    "print(\"1.add\\n2.sub\\n3.mul\\n4.division\")\n",
+    "opt = input(\"ENTER AN OPTION:\")#3\n",
+    "if opt==\"1\":#\"3\"==\"1\": False\n",
+    "    print(a+b)\n",
+    "if opt==\"2\":#\"3\"==\"2\": False\n",
+    "    print(a-b)\n",
+    "if opt==\"3\":#\"3\"==\"3\": True\n",
+    "    print(a*b)\n",
+    "if opt==\"4\":#\"3\"==\"4\": False\n",
+    "    print(a/b)\n",
+    "else:\n",
+    "    print(\"ENTER VALID OPTION\")\n",
+    "print(\"THANK YOU!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "531519e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.add\n",
+      "2.sub\n",
+      "3.mul\n",
+      "4.division\n",
+      "ENTER AN OPTION:3\n",
+      "2000000\n",
+      "THANK YOU!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ELIF: \n",
+    "a=1000\n",
+    "b=2000\n",
+    "print(\"1.add\\n2.sub\\n3.mul\\n4.division\")\n",
+    "opt = input(\"ENTER AN OPTION:\")#3\n",
+    "if opt==\"1\":#\"3\"==\"1\": False\n",
+    "    print(a+b)\n",
+    "elif opt==\"2\":#\"3\"==\"2\": False\n",
+    "    print(a-b)\n",
+    "elif opt==\"3\":#\"3\"==\"3\": True\n",
+    "    print(a*b)\n",
+    "elif opt==\"4\":\n",
+    "    print(a/b)\n",
+    "else:\n",
+    "    print(\"ENTER VALID OPTION\")\n",
+    "print(\"THANK YOU!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a9c42f75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.add\n",
+      "2.sub\n",
+      "3.mul\n",
+      "4.division\n",
+      "ENTER AN OPTION:1\n",
+      "3000\n",
+      "THANK YOU!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ELIF: \n",
+    "a=1000\n",
+    "b=2000\n",
+    "print(\"1.add\\n2.sub\\n3.mul\\n4.division\")\n",
+    "opt = input(\"ENTER AN OPTION:\")#1\n",
+    "if opt==\"1\":#\"1\"==\"1\": True\n",
+    "    print(a+b)\n",
+    "elif opt==\"2\":\n",
+    "    print(a-b)\n",
+    "elif opt==\"3\":\n",
+    "    print(a*b)\n",
+    "elif opt==\"4\":\n",
+    "    print(a/b)\n",
+    "else:\n",
+    "    print(\"ENTER VALID OPTION\")\n",
+    "print(\"THANK YOU!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b78eaf86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.add\n",
+      "2.sub\n",
+      "3.mul\n",
+      "4.division\n",
+      "ENTER AN OPTION:2\n",
+      "-1000\n",
+      "THANK YOU!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ELIF: \n",
+    "a=1000\n",
+    "b=2000\n",
+    "print(\"1.add\\n2.sub\\n3.mul\\n4.division\")\n",
+    "opt = input(\"ENTER AN OPTION:\")#2\n",
+    "if opt==\"1\":#\"2\"==\"1\": False\n",
+    "    print(a+b)\n",
+    "elif opt==\"2\":# \"2\"==\"2\": True\n",
+    "    print(a-b)\n",
+    "elif opt==\"3\":\n",
+    "    print(a*b)\n",
+    "elif opt==\"4\":\n",
+    "    print(a/b)\n",
+    "else:\n",
+    "    print(\"ENTER VALID OPTION\")\n",
+    "print(\"THANK YOU!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2486678a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.add\n",
+      "2.sub\n",
+      "3.mul\n",
+      "4.division\n",
+      "ENTER AN OPTION:5\n",
+      "ENTER VALID OPTION\n",
+      "THANK YOU!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#ELIF: \n",
+    "a=1000\n",
+    "b=2000\n",
+    "print(\"1.add\\n2.sub\\n3.mul\\n4.division\")\n",
+    "opt = input(\"ENTER AN OPTION:\")#5\n",
+    "if opt==\"1\":#\"5\"==\"1\": False\n",
+    "    print(a+b)\n",
+    "elif opt==\"2\":# \"5\"==\"2\": False\n",
+    "    print(a-b)\n",
+    "elif opt==\"3\":# \"5\"==\"3\": False\n",
+    "    print(a*b)\n",
+    "elif opt==\"4\":# \"5\"==\"4\": False\n",
+    "    print(a/b)\n",
+    "else:\n",
+    "    print(\"ENTER VALID OPTION\")\n",
+    "print(\"THANK YOU!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "a475c526",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number:23\n",
+      "ODD\n"
+     ]
+    }
+   ],
+   "source": [
+    "# take a number from the user and check whether it is even or odd\n",
+    "number= input(\"Enter number:\")\n",
+    "number = float(number)\n",
+    "if number%2==0:\n",
+    "    print(\"EVEN\")\n",
+    "else:\n",
+    "    print(\"ODD\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "210b72da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number:\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "could not convert string to float: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# take a number from the user and check whether it is even or odd\u001b[39;00m\n\u001b[0;32m      2\u001b[0m number\u001b[38;5;241m=\u001b[39m \u001b[38;5;28minput\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnter number:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 3\u001b[0m number \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mfloat\u001b[39m(number)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m number\u001b[38;5;241m%\u001b[39m\u001b[38;5;241m2\u001b[39m\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEVEN\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mValueError\u001b[0m: could not convert string to float: ''"
+     ]
+    }
+   ],
+   "source": [
+    "# take a number from the user and check whether it is even or odd\n",
+    "number= input(\"Enter number:\")\n",
+    "number = float(number)\n",
+    "if number%2==0:\n",
+    "    print(\"EVEN\")\n",
+    "else:\n",
+    "    print(\"ODD\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "8a0c1dd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number:24\n",
+      "EVEN\n"
+     ]
+    }
+   ],
+   "source": [
+    "# take a number from the user and check whether it is even or odd\n",
+    "number= input(\"Enter number:\")#24\n",
+    "if number:#True, bool(24): True\n",
+    "    number = float(number)#24.0\n",
+    "    if number%2==0:#24%2=0, 0==0: True\n",
+    "        print(\"EVEN\")\n",
+    "    else:\n",
+    "        print(\"ODD\")\n",
+    "else:\n",
+    "    print(\"ENTER A VALID NUMBER\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "04ac69ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter number:\n",
+      "ENTER A VALID NUMBER\n"
+     ]
+    }
+   ],
+   "source": [
+    "# take a number from the user and check whether it is even or odd\n",
+    "number= input(\"Enter number:\")#\"\"\n",
+    "if number:#bool(''): False\n",
+    "    number = float(number)\n",
+    "    if number%2==0:\n",
+    "        print(\"EVEN\")\n",
+    "    else:\n",
+    "        print(\"ODD\")\n",
+    "else:\n",
+    "    print(\"ENTER A VALID NUMBER\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e80aa18",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
