--- a/functions.ipynb
+++ b/functions.ipynb
@@ -1866,8 +1866,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7121b1fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "result= <function fun at 0x000001D145B02AC0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fun():\n",
+    "    print(\"HELLO\")\n",
+    "    return 20\n",
+    "res=fun\n",
+    "print(\"result=\", res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ae3bbb4",
    "metadata": {},
    "outputs": [],
    "source": []
