--- a/functions.ipynb
+++ b/functions.ipynb
@@ -1888,8 +1888,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0ae3bbb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is operation\n",
+      "x=2, y=4\n",
+      "result= -2\n",
+      "r1= None\n",
+      "this is operation\n",
+      "x=4, y=5\n",
+      "result= 9\n",
+      "r2= None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add(x,y):\n",
+    "    print(f\"x={x}, y={y}\")\n",
+    "    return x+y\n",
+    "def sub(x,y):\n",
+    "    print(f\"x={x}, y={y}\")\n",
+    "    return x-y\n",
+    "def operation(fun,a,b):\n",
+    "    print(\"this is operation\")\n",
+    "    res=fun(a,b)#add(a,b)\n",
+    "    print(\"result=\",res)\n",
+    "r1=operation(sub,2,4)\n",
+    "print(\"r1=\",r1)\n",
+    "r2=operation(add,4,5)\n",
+    "print(\"r2=\",r2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75f47022",
    "metadata": {},
    "outputs": [],
    "source": []
