--- a/list functions.ipynb
+++ b/list functions.ipynb
@@ -722,15 +722,445 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f190f3ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ABC', 'GHI', 'abc', 'def', 'ghi']\n"
+     ]
+    }
+   ],
    "source": [
     "l=[\"abc\",\"ABC\",\"def\",\"ghi\",\"GHI\"]\n",
     "l.sort()\n",
     "print(l)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a3271a49",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['abc', 'ABC', 'def', 'ghi', 'GHI']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"abc\",\"ABC\",\"def\",\"ghi\",\"GHI\"]\n",
+    "def cmp(x):\n",
+    "    return x.casefold()\n",
+    "l.sort(key=cmp)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "27a97ec8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,4]\n",
+    "print(max(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "8e325229",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"1\",\"2\",\"3\",\"4\",\"30\",\"20\"]\n",
+    "print(max(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "f85c6624",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3', '4', '30', '20']\n",
+      "[1, 2, 3, 4, 30, 20]\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"1\",\"2\",\"3\",\"4\",\"30\",\"20\"]\n",
+    "res=[]\n",
+    "for i in l:\n",
+    "    res.append(int(i))\n",
+    "print(l)\n",
+    "print(res)\n",
+    "print(max(l))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f25d5751",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3', '4', '30', '20']\n",
+      "[1, 2, 3, 4, 30, 20]\n",
+      "4\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"1\",\"2\",\"3\",\"4\",\"30\",\"20\"]\n",
+    "res=[]\n",
+    "for i in l:\n",
+    "    res.append(int(i))\n",
+    "print(l)\n",
+    "print(res)\n",
+    "print(max(l))\n",
+    "print(max(res))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5c538a18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "['1', '2', '3', '4', '30', '20']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"1\",\"2\",\"3\",\"4\",\"30\",\"20\"]\n",
+    "def conv(x):\n",
+    "    return int(x)\n",
+    "print(max(l, key=conv))\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "956b8221",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "['1', '2', '3', '4', '30', '20']\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[\"1\",\"2\",\"3\",\"4\",\"30\",\"20\"]\n",
+    "def conv(x):\n",
+    "    return int(x)\n",
+    "print(min(l, key=conv))\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "2ca20eaa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 'Rajesh'), (2, 'Ameel'), (3, 'Amar'), (4, 'Sai')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[(1,'Rajesh'),(2,\"Ameel\"),(4,\"Sai\"),(3,\"Amar\")]\n",
+    "l.sort()\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "59a23b31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x= (1, 'Rajesh')\n",
+      "x= (2, 'Ameel')\n",
+      "x= (4, 'Sai')\n",
+      "x= (3, 'Amar')\n",
+      "[(1, 'Rajesh'), (2, 'Ameel'), (3, 'Amar'), (4, 'Sai')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[(1,'Rajesh'),(2,\"Ameel\"),(4,\"Sai\"),(3,\"Amar\")]\n",
+    "def conv(x):\n",
+    "    print(\"x=\",x)\n",
+    "    return x\n",
+    "l.sort(key=conv)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "66852e2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x= (1, 'Rajesh')\n",
+      "x= (2, 'Ameel')\n",
+      "x= (4, 'Sai')\n",
+      "x= (3, 'Amar')\n",
+      "[(3, 'Amar'), (2, 'Ameel'), (1, 'Rajesh'), (4, 'Sai')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[(1,'Rajesh'),(2,\"Ameel\"),(4,\"Sai\"),(3,\"Amar\")]\n",
+    "def conv(x):\n",
+    "    print(\"x=\",x)\n",
+    "    return x[1]\n",
+    "l.sort(key=conv)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4069dd0b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(3, 'Amar'), (2, 'Ameel'), (1, 'Rajesh'), (4, 'Sai')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[(1,'Rajesh'),(2,\"Ameel\"),(4,\"Sai\"),(3,\"Amar\")]\n",
+    "def conv(x):\n",
+    "    return x[1]\n",
+    "l.sort(key=conv)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "17079591",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(4, 'Sai'), (1, 'Rajesh'), (2, 'Ameel'), (3, 'Amar')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[(1,'Rajesh'),(2,\"Ameel\"),(4,\"Sai\"),(3,\"Amar\")]\n",
+    "def conv(x):\n",
+    "    return x[1]\n",
+    "l.sort(key=conv, reverse=True)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f222f171",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 5, 6, 7, 8]\n",
+      "[1, 2, 3, 3, 3, 4, 5, 6, 3, 3, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,3,3,4,5,6,3,3,7,8]\n",
+    "# remove all 3's from list\n",
+    "res=[]\n",
+    "for i in l:\n",
+    "    if i!=3:\n",
+    "        res.append(i)\n",
+    "print(res)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "ec687f71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 3, 4, 5, 6, 3, 3, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,3,3,4,5,6,3,3,7,8]\n",
+    "l.remove(3)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ab095f6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 5, 6, 7, 8]\n",
+      "[1, 2, 3, 3, 3, 4, 5, 6, 3, 3, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,3,3,4,5,6,3,3,7,8]\n",
+    "res=list(filter(lambda x:x!=3, l))\n",
+    "print(res)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8149557e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 5, 6, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,3,3,4,5,6,3,3,7,8]\n",
+    "l=list(filter(lambda x:x!=3, l))\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4effda04",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 5, 6, 3, 3, 7, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,3,3,4,5,6,3,3,7,8]\n",
+    "for i in l:\n",
+    "    if i==3:\n",
+    "        l.remove(3)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6df48a22",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m l\u001b[38;5;241m=\u001b[39m[\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m,\u001b[38;5;241m5\u001b[39m,\u001b[38;5;241m6\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m7\u001b[39m,\u001b[38;5;241m8\u001b[39m]\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(l)):\n\u001b[1;32m----> 3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m l[i]\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m3\u001b[39m:\n\u001b[0;32m      4\u001b[0m         l\u001b[38;5;241m.\u001b[39mremove(\u001b[38;5;241m3\u001b[39m)\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(l)\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "l=[1,2,3,3,3,4,5,6,3,3,7,8]\n",
+    "for i in range(len(l)):\n",
+    "    if l[i]==3:\n",
+    "        l.remove(3)\n",
+    "print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6a1d23f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
